<resources>
    <string name="app_name">ProductApp</string>
    <string name="add">AGREGAR</string>
    <string name="update">ACTUALIZAR</string>
    <string name="get">BUSCAR</string>
    <string name="delete">ELIMINAR</string>

    <string name="producto">Producto</string>
    <string name="codigo">Código</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="actualizar">¿Actualizar?</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_todos">TODOS LOS PRODUCTOS</string>

    <!--editText-->
    <string name="introducir_codigo">Introduce el código del producto</string>
    <string name="introducir_producto">Introduce el nombre del producto</string>
    <string name="introducir_descripcion">Introduce la descripción del producto</string>
    <string name="introducir_precio">Introduce el precio del producto</string>

    <!--Register-->
    <string name="correoRegister">Correo</string>
    <string name="contraseñaRegister">Contraseña</string>
    <string name="contraseñaConfirmRegister">Confirmar contraseña</string>

    <string name="correoRegisterHint">Introduce tu correo</string>
    <string name="contraseñaRegisterHint">Introduce una contraseña</string>
    <string name="contraseñaConfirmRegisterHint">Confirme la contraseña</string>

    <string name="reister">Registrar</string>


    <!--Login-->
    <string name="contraseñaLogin">Contraseña</string>
    <string name="correoLogin">Correo</string>
    <!--Ayuda-->
    <string name="strDescription">Gestiona el precio de tus productos de forma sencilla desde tu celular</string>
    <string name="strAgregar">Completar los campos requeridos y luego presionar el botón “AGREGAR”.</string>
    <string name="strBuscar">Completar la casilla de “Código” y presionar el botón “BUSCAR”.</string>
    <string name="strEliminar">Completar la casilla de “Código”, presionar el botón “ELIMINAR” y confirmar la acción.</string>
    <string name="strActualizar">En la casilla de “Precio” introducir el porcentaje que desea aumentar en los productos y presionar el botón “ACTUALIZAR”. Tener en cuenta:
-	Todos los productos se actualizarán;
-	Se aumentará el porcentaje ingresado.
-	Ejemplo: si en la casilla de precio introduzco el número 50 y presiono el botón “ACTUALIZAR”, el precio de TODOS LOS PRODUCTOS se incrementará un 50%.
</string>
    <string name="strActualizarUno">Para actualizar el precio de un solo producto deberá eliminarlo y volverlo a agregar con el precio que corresponda.</string>
    <string name="strTodosLosProductos">Presionar el botón “TODOS LOS PRODUCTOS”. Se mostrarán todos los productos según el momento en que fueron agregados.</string>


</resources>