<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondo"
    android:orientation="vertical"
    android:padding="16dp">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/fondo"
        app:titleTextColor="@color/fondo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="-6dp"
        android:text="@string/codigo"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etCodigo"
        style="@style/editText"
        android:hint="@string/introducir_codigo"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-6dp"
        android:text="@string/producto"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etProducto"
        style="@style/editText"
        android:hint="@string/introducir_producto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-6dp"
        android:text="@string/descripcion"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etDescription"
        style="@style/editText"
        android:hint="@string/introducir_descripcion"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-6dp"
        android:text="@string/precio"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etPrecio"
        style="@style/editText"
        android:hint="@string/introducir_precio"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btSearch"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/primario"
            android:text="@string/get"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primario"
            android:text="@string/add"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primario"
            android:text="@string/delete"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primario"
            android:text="@string/update"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btTodos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primario"
        android:text="@string/btn_todos"
        android:textAllCaps="true"
        android:textColor="@color/white" />


</LinearLayout>