<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/secundario"
    android:orientation="vertical"
    android:padding="16dp">



    <TextView
        android:id="@+id/tvUpdateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/actualizar"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:gravity="center">

    </TextView>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#8A2A2A"
            android:textAllCaps="true"
            android:text="@string/btn_actualizar">

        </Button>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primario"
            android:text="@string/btn_volver"
            android:textAllCaps="true">

        </Button>
    </LinearLayout>

</LinearLayout>